k8s/deployment-template.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-deployment
  labels:
    app: first-k8s
spec:
  replicas: 3
  selector:
    matchLabels:
      app: first-k8s
  template:
    metadata:
      labels:
        app: first-k8s
    spec:
      containers:
        - name: first-k8s
          image: coderjiajiema/k8simage:1.0
          ports:
            - containerPort: 3000
