k8s/service-template.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: first-k8s
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
