k8s/ingress-template.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "my.first.k8s.com"
      http:
        paths:
          - pathType: Prefix
            path: "/happy"
            backend:
              service:
                name: my-service
                port:
                  number: 80
